--- a/WebContent/index.html
+++ b/WebContent/index.html
@@ -35,11 +35,11 @@
 			</nav>
 	</header>
 	<br>
-	<div id="topmid"><h1>Welcome to Online <br>Book Store</h1></div>
+	<div id="topmid"><h1>Welcome to Online <br>SRINFOTECHAWS AND DEVOPS Training</h1></div>
 	<br>
 	<table class="tab">
 		<tr>
-			<td><a href="index.html" id="happy">Happy Learning!!<br>Welcome to our book store!</a></td>
+			<td><a href="index.html" id="happy">Happy Learning!!<br>Welcome to SRINFOTECHAWS AND DEVOPS Training!</a></td>
 		</tr>
 	</table>
 
